--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - CWI Crescer</p>
+            <p>&nbsp&nbsp&copy; @DateTime.Now.Year - CWI Crescer</p>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
