--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     </li>
                     <li>
                         <form class="nav-form form-filtro" action='@Url.Action("JogosDisponiveis", "Relatorio")' method="get">
-                            <input type="text" placeholder="Digite sua busca" name="nome" />
+                            <input class="transparente" type="text" placeholder="Digite sua busca" name="nome" />
                             <input class="shiny-button" type="submit" value="Buscar" />
                         </form>
                     </li>
