style(_Layout.cshtml): mostrar ícone do item no autocomplete

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -55,7 +55,12 @@
                         location.href = "/Jogo/Detalhes/" + ui.item.value;
                     }
                 }
-            });
+            }).data("autocomplete")._renderItem = function (ul, item) {
+                return $("<li>").data("item.autocomplete", item)
+                    .append("<img width='50' height=50 src=" + item.icon + " />")
+                    .append("<a>" + item.label + "</a>")
+                    .appendTo(ul);
+            };
         });
     </script>
 </body>
