feat(EntityFramework): implementar código visto em aula

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -62,6 +62,14 @@
                     .appendTo(ul);
             };
         });
+        $.ui.autocomplete.prototype._renderMenu = function (ul, items) {
+            var self = this;
+            $.each(items, function (index, item) {
+                if (index < 5)
+                { self._renderItem(ul, item); }
+            });
+            ul.append("<li class='item-ver-tudo'><a>Ver tudo</a></li>");
+        }
     </script>
 </body>
 </html>
