--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
@@ -21,13 +21,25 @@ h3 {
 }
 
 .navbar.navbar-inverse.navbar-fixed-top {
-    background-color: rgba(0,0,0,0.9);
+    background-color: black;
     border-bottom: 1px solid #222;
 }
 
 form input.transparente {
     background-color: rgba(255,255,255,0.2);
     color: #f1f1f1;
+}
+
+.item-ver-tudo {
+    background-color: rgba(0,0,0,0.9);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.item-ver-tudo a {
+    color: rgba(0,0,0,0.8);
+    font-weight: bold;
+    padding-left: 5px;
 }
 
 .celula-jogo {
@@ -106,6 +118,10 @@ form input.transparente {
             font-size: 35px;
             font-weight: bolder;
         }
+
+.ui-menu {
+    box-shadow: 0 0 5px black;
+}
 
 .ui-menu .ui-menu-item {
     margin-left:-40px;
