refactor(_Layout.cshtml): criar arquivo javascript específico para tratar relacionado ao autocomplete

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -45,40 +45,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/submitquery")
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $(".texto-busca").autocomplete({
-                source: '@Url.Action("Autocomplete", "Relatorio")',
-                minLength: 1,
-                select: function (event, ui) {
-                    if (ui.item) {
-                        if (ui.item.value === '*') {
-                            $('.form-filtro').submit();
-                        } else {
-                            location.href = '/Jogo/Detalhes/' + ui.item.value;
-                        }
-                    }
-                }
-            }).data("autocomplete")._renderItem = function (ul, item) {
-                var newItem = $("<li>").data("item.autocomplete", item);
-                if (item.icon) {
-                    newItem.append("<img width='50' height=50 src=" + item.icon + " />")
-                }
-                newItem.append("<a>" + item.label + "</a>")
-                    .appendTo(ul);
-
-                if (item.value === '*') newItem.addClass('item-ver-tudo');
-                return newItem;
-            };
-        });
-        $.ui.autocomplete.prototype._renderMenu = function (ul, items) {
-            var self = this;
-            $.each(items, function (index, item) {
-                if (index < 5)
-                { self._renderItem(ul, item); }
-            });
-            self._renderItem(ul, { label: 'Ver tudo', value: '*' });
-        }
-    </script>
+    @Scripts.Render("~/bundles/autocomplete")
 </body>
 </html>
