fix(Locadora): corrigir uso do entity framework

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
@@ -20,7 +20,7 @@ h3 {
     font-size: 15px;
 }
 
-input:focus, a:focus {
+input:focus, a:focus, button:focus {
     outline-color: rgba(0,0,0,0);
 }
 
