feat(Locadora): implementar código visto em aula e começar exercícios

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_CelulaJogo.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_CelulaJogo.cshtml
@@ -8,7 +8,7 @@
                 <img src="~/Content/Images/edit.png" />
             </a>
         </div>
-        <h2>@Model.Preco.ToString("c")</h2>
+        <h2>@Html.Partial("_ImagemSelo", Model.Selo.Nome)</h2>
         <h3>@Html.Partial("_ImagemCategoria", Model.Categoria)</h3>
     </div>
 </div>
