--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                             <input class="botao-busca" type="submit" value="" />
                         </form>
                     </li>
+                    <li>
+                        <a class="nav-link" href='@Url.Action("Sair", "Home")'>Sair</a>
+                    </li>
                 </ul>
             </div>
         </div>
