--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_CelulaJogo.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_CelulaJogo.cshtml
@@ -4,8 +4,12 @@
     <img src=@Model.Imagem />
     <div class="celula-jogo-info">
         <div class="nome">
-            @Model.Nome <a href='@Url.Action("Manter", "Jogo")/@Model.Id'>
+            @Model.Nome
+            <a href='@Url.Action("Manter", "Jogo")/@Model.Id'>
                 <img src="~/Content/Images/edit.png" />
+            </a>
+            <a href='@Url.Action("Locacao", "Locacao")/@Model.Id'>
+                <img src="~/Content/Images/alugar.png" />
             </a>
         </div>
         <h2>@Html.Partial("_ImagemSelo", Model.Selo.Nome)</h2>
