refactor(JogosDisponiveis.cshtml): remover ordenação por preço

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -41,7 +41,7 @@
                     <span>Classificar por</span>
                     <select class="ordem" onchange="$('.form-filtro').submit()">
                         @{
-                            var opcoes = new List<string>() { "Título(A-Z)", "Título(Z-A)", "Preço(menor-maior)", "Preço(maior-menor)" };
+                            var opcoes = new List<string>() { "Título(A-Z)", "Título(Z-A)" };
                             foreach (string opcao in opcoes)
                             {
                                 if (opcao == ViewBag.Ordem)
